<resources>
    <string name="app_name">Bark</string>
    <string name="preference_file_key">org.onedevblog.bark.detector_preferences</string>
    <string name="action_settings">Settings</string>
    <string name="saved_settings">Settings are saved</string>
    <string name="started">Started motion detection</string>
    <string name="stopped">Stopped motion detection</string>
    <string name="online">Detector is online</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tab_text_1">Detector</string>
    <string name="tab_text_2">Actions</string>
    <string name="detector_name">Detector Name</string>
    <string name="detector_name_hint">Room 1</string>
    <string name="detector_sensitivity">Detector Sensitivity</string>
    <string name="detector_delay">Delay between photos (ms)</string>
    <string name="rotation_degrees">Rotation degrees</string>
    <string name="image_width">Image width</string>
    <string name="image_height">Image height</string>
    <string name="put_date_on_image">Put date and name on image</string>
    <string name="camera">Camera</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="default_rotation_degrees">0</string>
    <string name="default_detector_sensitivity">5000</string>
    <string name="default_delay_between_photos">5000</string>
    <string name="default_image_width">1088</string>
    <string name="default_image_height">1920</string>
    <string name="media_library">Media Library</string>
    <string name="save_to_media_library">Save images to Media Library</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_instruction">Open Telegram. Find @BarkMobileBot using search and start conversation. Bot will respond with chat_id, which you need to copy to the field below and save Settings.</string>
    <string name="telegram_chat_id">Telegram Chat ID</string>
    <string name="send_to_telegram">Send images to Telegram</string>
    <string name="start_delay">Delay before start (ms)</string>
    <string name="default_start_delay">0</string>
    <string name="record_video">Record Video</string>
    <string name="save_video_to_disk">Save Video to Disk</string>
    <string name="send_video_to_telegram">Send Video to Telegram</string>
</resources>
