<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/constraintLayout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.main.ActionsSettingsFragment"
>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_margin="10dp"
                android:layout_marginBottom="10dp">


            <TextView
                    android:text="@string/media_library"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <CheckBox
                    android:text="@string/save_to_media_library"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/save_to_medialibrary_checkbox"/>
            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
            />
            <TextView
                    android:text="@string/telegram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                    android:text="@string/telegram_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:inputType="textMultiLine"/>
            <TextView
                    android:text="@string/telegram_chat_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/telegram_chat_id_edit"/>
            <CheckBox
                    android:text="@string/send_to_telegram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/send_to_telegram_checkbox"/>
            <CheckBox
                    android:text="@string/send_video_to_telegram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/send_video_to_telegram_checkbox"/>
            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
            />
            <TextView
                    android:text="@string/record_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <CheckBox
                    android:text="@string/save_video_to_disk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/record_video_checkbox"/>
            <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
            />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>